Updated RestApiController.java in order to send correct and comprehensive error codes. Modified api-docs.yaml in order to be up-to-date with the actual version of RestApiController.java
